name:                hummingbird
synopsis:            A multi-threaded MQTT broker.
description:
  The package installs `hummingbird` which is already a full-fledged MQTT
  broker with configuration files, logging, authentication etc.

  If this is not sufficient for your use case you might also consider to
  assemble your own broker (i.e. with a custom authentication mechanism).
version:             0.4.0.0
license:             MIT
license-file:        LICENSE
author:              Lars Petersen
maintainer:          info@lars-petersen.net
category:            Network, IoT
homepage:            https://github.com/lpeterse/haskell-hummingbird
bug-reports:         https://github.com/lpeterse/haskell-hummingbird/issues
extra-source-files:  README.md
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: git://github.com/lpeterse/haskell-hummingbird.git

library
  ghc-options:          -Wall -fno-warn-orphans
  exposed-modules:      Hummingbird
                      , Hummingbird.Administration.Cli
                      , Hummingbird.Administration.Escape
                      , Hummingbird.Administration.Request
                      , Hummingbird.Administration.Response
                      , Hummingbird.Administration.Server
                      , Hummingbird.Configuration
                      , Hummingbird.Internal
                      , Hummingbird.Logging
                      , Hummingbird.Prometheus
                      , Hummingbird.SimpleAuthenticator
                      , Hummingbird.SysInfo
                      , Hummingbird.Terminator
                      , Hummingbird.Transport
  build-depends:        base
                      , aeson >= 1.1.0.0
                      , async
                      , attoparsec
                      , bcrypt
                      , binary
                      , bytestring
                      , transformers
                      , clock
                      , containers
                      , data-default
                      , data-default-class
                      , haskeline
                      , filepath
                      , hslogger
                      , mqtt
                      , options
                      , parsec
                      , socket
                      , socket-unix
                      , text
                      , tls
                      , unix
                      , unordered-containers
                      , uuid
                      , websockets
                      , x509
                      , x509-store
                      , yaml
                      , prometheus-client
                      , prometheus-metrics-ghc
                      , wai-middleware-prometheus
                      , warp
                      , network-stacks
  hs-source-dirs:      src
  default-language:    Haskell2010

executable hummingbird
  build-depends:
    base,
    mqtt,
    hummingbird
  ghc-options:      -rtsopts -Wall -O2 -threaded -fprof-auto -with-rtsopts=-T
  default-language: Haskell2010
  hs-source-dirs:   app
  main-is:          hummingbird.hs