name:                hummingbird
synopsis:            A multi-threaded MQTT broker.
description:
  The package installs `hummingbird` which is already a full-fledged MQTT
  broker with configuration files, logging, authentication etc.

  If this is not sufficient for your use case you might also consider to
  assemble your own broker (i.e. with a custom authentication mechanism).
version:             0.8.1.0
license:             MIT
license-file:        LICENSE
author:              Lars Petersen
maintainer:          info@lars-petersen.net
category:            Network, IoT
homepage:            https://github.com/lpeterse/haskell-hummingbird
bug-reports:         https://github.com/lpeterse/haskell-hummingbird/issues
extra-source-files:  README.md
                     CHANGELOG.md
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: git://github.com/lpeterse/haskell-hummingbird.git

library
  ghc-options:          -Wall -fno-warn-orphans
  exposed-modules:
    Hummingbird,
    Hummingbird.Administration.Cli,
    Hummingbird.Administration.Escape,
    Hummingbird.Administration.Request,
    Hummingbird.Administration.Response,
    Hummingbird.Administration.Server,
    Hummingbird.Configuration,
    Hummingbird.Internal,
    Hummingbird.Logging,
    Hummingbird.Prometheus,
    Hummingbird.SimpleAuthenticator,
    Hummingbird.SysInfo,
    Hummingbird.Terminator,
    Hummingbird.Transport,
    Hummingbird.Pkcs8
  build-depends: 
    base,
    aeson,
    async,
    attoparsec,
    bcrypt,
    binary,
    bytestring,
    base64-bytestring,
    pem,
    asn1-types,
    asn1-parse,
    asn1-encoding,
    transformers,
    clock,
    containers,
    data-default,
    data-default-class,
    directory,
    haskeline,
    filepath,
    hslogger,
    mqtt,
    networking,
    options,
    parsec,
    socket,
    socket-unix,
    text,
    tls,
    unix,
    unordered-containers,
    uuid,
    websockets,
    x509,
    x509-store,
    yaml,
    prometheus-client,
    prometheus-metrics-ghc,
    wai-middleware-prometheus,
    warp
  hs-source-dirs:      src
  default-language:    Haskell2010

executable hummingbird
  build-depends:
    base,
    mqtt,
    hummingbird
  other-modules:
    Paths_hummingbird
  ghc-options:      -rtsopts -Wall -O2 -threaded -fprof-auto -with-rtsopts=-T -Werror
  default-language: Haskell2010
  hs-source-dirs:   app
  main-is:          hummingbird.hs

test-suite test
  type:
    exitcode-stdio-1.0
  default-language:
    Haskell2010
  ghc-options:
    -Wall -fno-warn-orphans
  hs-source-dirs:
    test
  main-is:
    Main.hs
  build-depends:
    base >= 4.8 && < 5,
    mqtt,
    hummingbird,
    tasty >= 0.11,
    tasty-hunit,
    tasty-quickcheck
